# cortex-vision

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
cortex_vision/: __init__.py  __main__.py
cortex_vision/server/: __init__.py  mcp_tools.py
cortex_vision/vision/: __init__.py  helper.py  intent.py
scripts/: launcher.py  viscap.swift
